[package]
name = "rpi-ws281x-sys"
version = "0.1.0"
authors = ["Linus Färnstrand <faern@faern.net>"]
edition = "2018"
description = "Low level bindings to rpi_ws281x for controlling ws2811 type LEDs with a Raspberry Pi"
keywords = ["ws2811", "sk6812", "led", "rpi"]
categories = ["external-ffi-bindings", "no-std"]
repository = "https://github.com/faern/rpi-ws281x-rs"
license = "MIT OR Apache-2.0"

links = "ws281x"

[dependencies]

[build-dependencies]
cc = "1.0"
